add next js dev server to package file

--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
     "@types/node": "^13.1.2",
     "@types/react": "^16.9.17",
     "typescript": "^3.7.4"
+  },
+  "scripts": {
+    "dev": "next",
+    "build": "next build",
+    "start": "next start"
   }
 }
