--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   "dependencies": {
     "@material-ui/core": "^4.8.2",
     "@material-ui/icons": "^4.5.1",
+    "@types/react-redux": "^7.1.7",
     "@types/styled-components": "^4.4.2",
     "next": "^9.1.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-redux": "^7.1.3",
+    "react-redux": "^7.2.0",
     "redux": "^4.0.5",
+    "reselect": "^4.0.0",
     "styled-components": "^5.0.0"
   },
   "devDependencies": {
